# actix-bundled-app-template

./: Cargo.toml  README.md  build.rs
assets/static/js/: index.js
assets/templates/: base.html.tera  index.html.tera
src/: main.rs  startup.rs
